api user guide html fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
       {% if site.github.is_project_page %}
         <a href="/{{site.github.repository_name}}/docs/user-guide.html" class="btn">User Guide</a>
         <a href="/{{site.github.repository_name}}/docs/development-guide.html" class="btn">Dev Guide</a>
-        <a href="{{ site.github.owner_url }}/amos-ws16-arrowjs-server/docs/user-guide.html" class="btn">API Guide</a>
+        <a href="{{ site.github.owner_url }}/amos-ws16-arrowjs-server/blob/master/docs/user-guide.md" class="btn">API Guide</a>
         <a href="/{{site.github.repository_name}}/CHANGELOG.html" class="btn">Changelog</a>
         <a href="{{ site.github.repository_url }}" class="btn">Engine GitHub</a>
         <a href="{{ site.github.owner_url }}/amos-ws16-arrowjs-server" class="btn">Server GitHub</a>
